--- a/components/home/ScheduleWidget.module.css
+++ b/components/home/ScheduleWidget.module.css
@@ -5,6 +5,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  min-width: 0;
 }
 
 .tabs {
